--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -154,7 +154,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:text="Support Groups"
+                    android:text="Support Structures"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="#000" />
@@ -189,7 +189,7 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginTop="4dp"
                     android:layout_weight="1"
-                    android:text="Service Centres"
+                    android:text="Support Centres"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="#000">
