Updated mentors activity

--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -111,7 +111,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
-            android:text="Other videos"
+            android:text="Inspirational videos"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="#000" />
