Updated mentors activity

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -29,7 +29,8 @@
             android:text="GRACE MATHOLE"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
             android:textSize="16dp"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            />
 
 
         <RelativeLayout
@@ -48,17 +49,15 @@
                 android:id="@+id/ImageView_user_pic"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-
-               
-
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
                 android:onClick="proPic"
                 android:scaleType="centerCrop"
                 android:src="@drawable/default_pic"
-                app:civ_border_color="@color/colorPrimaryDark"
-                app:civ_border_width="2dp" />
+                app:civ_border_width="2dp"
+                app:civ_border_color="@color/colorAccent"/>
+
 
 
         </RelativeLayout>
