--- a/app/src/main/res/layout/activity_social_media.xml
+++ b/app/src/main/res/layout/activity_social_media.xml
@@ -6,16 +6,87 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/untitled"
     tools:context="com.irinnovative.onepagesigninsignup.SocialMediaActivity">
 
-    <com.hitomi.cmlibrary.CircleMenu
-        android:id="@+id/circle_menu"
-        android:layout_width="500dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:layout_centerInParent="true"/>
+        android:orientation="vertical"
+        android:layout_marginBottom="10dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/untitled"
+            android:scaleType="centerCrop"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="5dp"
+            android:textAlignment="center"
+            android:text="FOLLOW US ON HERE !"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
+            android:textSize="16dp"
+            android:textColor="@color/colorAccent"
+            android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:id="@+id/facebook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+
+            android:background="#3B5997"
+            android:drawableLeft="@drawable/facebook"
+            android:drawablePadding="10dp"
+            android:onClick="facebook"
+            android:paddingLeft="10dp"
+            android:text="FACEBOOK"
+            android:textAlignment="textStart" />
 
 
+        <Button
+            android:id="@+id/twitter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="#33CCFF"
+            android:drawableLeft="@drawable/twitter"
+            android:drawablePadding="10dp"
+            android:onClick="twitter"
+            android:paddingLeft="10dp"
+            android:text="Twitter"
+            android:textAlignment="textStart" />
+
+        <Button
+            android:id="@+id/instagram"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="#F4823E"
+            android:drawableLeft="@drawable/instagram"
+            android:drawablePadding="10dp"
+            android:onClick="instagram"
+            android:paddingLeft="10dp"
+            android:text="Instagram"
+            android:textAlignment="textStart" />
+
+        <Button
+            android:id="@+id/web"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/colorBlackTrans"
+            android:drawableLeft="@drawable/ic_website"
+            android:drawablePadding="10dp"
+            android:onClick="web"
+            android:paddingLeft="10dp"
+            android:text="website"
+            android:textAlignment="textStart" />
+
+
+    </LinearLayout>
 </LinearLayout>
