--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -1,16 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.irinnovative.onepagesigninsignup.TwoFragment">
+    android:orientation="vertical"
+    tools:context="com.irinnovative.onepagesigninsignup.activity.AbuseActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/card_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/lvAbuse"
-        android:divider="@color/colorPrimaryDark"
-        android:dividerHeight="2dp"
-        android:footerDividersEnabled="true"
-        android:headerDividersEnabled="true" />
+        android:layout_height="wrap_content"/>
 
-</RelativeLayout>
+</LinearLayout>
