--- a/app/src/main/res/layout/list_item_places.xml
+++ b/app/src/main/res/layout/list_item_places.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
         android:layout_margin="5dp"
