--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -1,60 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingStart="16dp">
+    >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="3dp"
+        android:weightSum="1">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image_view_abuse"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="10dp"
-        android:scaleType="centerCrop" />
+
+
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="63dp"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/cardview_compat_inset_shadow"
+
+        >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:orientation="horizontal"
 
-            android:orientation="vertical"
-            android:paddingStart="16dp">
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/image_view_abuse"
+                android:layout_width="71dp"
+                android:layout_height="84dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="5dp"
+                android:paddingBottom="10dp"
+                android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/txt_topic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_marginTop="2dp"
+
+
+                android:layout_weight="12.15"
                 android:text="Grace Mathole"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                 android:textColor="@android:color/black"
                 android:textStyle="normal" />
 
 
-            <TextView
-                android:id="@+id/txt_desc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:layout_gravity="top"
-                android:layout_weight="1"
-                android:text="Innovation hub"
-                android:lines="2"
-                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small.Inverse"
-                android:textColor="@android:color/black">
-
-            </TextView>
-
-
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
