--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -1,114 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
- xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.PlacesActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Institutions"
-        app:titleTextColor="@android:color/white" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:title="Institutions"
+            app:titleTextColor="@android:color/white" />
 
-    <ImageSwitcher
-        android:id="@+id/hotel_image_switch"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:animationCache="true"
-        android:background="#000">
-    </ImageSwitcher>
-
+        <ImageSwitcher
+            android:id="@+id/hotel_image_switch"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:animationCache="true"
+            android:background="#000"></ImageSwitcher>
 
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
-
-        <ImageButton
-            android:id="@+id/btn_place"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_place_black_24dp" />
-
-        <ImageButton
-            android:id="@+id/btn_call"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_call_black_24dp" />
-
-        <ImageButton
-            android:id="@+id/btn_web"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_language_black_24dp" />
-
-        <ImageButton
-            android:id="@+id/btn_direction"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_directions_black_24dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearDetails"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:id="@+id/hotel_info"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            tools:text="012 456 98775" />
+            android:layout_marginTop="5dp">
 
-    </LinearLayout>
+            <ImageButton
+                android:id="@+id/btn_place"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_place_black_24dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            <ImageButton
+                android:id="@+id/btn_call"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_call_black_24dp" />
 
-        android:orientation="vertical">
+            <ImageButton
+                android:id="@+id/btn_web"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_language_black_24dp" />
 
-        `
+            <ImageButton
+                android:id="@+id/btn_direction"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_directions_black_24dp" />
+        </LinearLayout>
 
-        <TextView
+        <LinearLayout
+            android:id="@+id/linearDetails"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
 
-            android:text="Description"
-            android:textSize="16dp"
-            android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/hotel_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
+                tools:text="012 456 98775" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical">
+
+            `
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="10dp"
+
+                android:text="Description"
+                android:textSize="16dp"
+                android:textStyle="bold" />
 
 
             <TextView
@@ -119,6 +115,6 @@
                 android:layout_marginLeft="10dp"
                 android:text="yrdtydfhjyuggyujyuftyrru76trtyutjyutrhyrhyrhyrhy" />
 
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
 </ScrollView>
