--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/nav_report"
             android:icon="@drawable/institution"
             android:title="Report Abuse" />
+        <item
+            android:id="@+id/nav_about"
+            android:icon="@drawable/ic_info_black_24dp"
+            android:title="About" />
     </group>
 
     <item android:title="Others">
