--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -10,7 +10,7 @@
         <item
             android:id="@+id/nav_learn"
             android:icon="@drawable/learn"
-            android:title="Learn More" />
+            android:title="Types of Abuse" />
         <item
             android:id="@+id/nav_support"
             android:icon="@drawable/build"
@@ -20,15 +20,15 @@
             android:id="@+id/nav_report"
             android:icon="@drawable/institution"
             android:title="Report Abuse" />
-        <item
-            android:id="@+id/nav_about"
-            android:icon="@drawable/ic_info_black_24dp"
-            android:title="About" />
+
     </group>
 
     <item android:title="Others">
         <menu>
-
+            <item
+                android:id="@+id/nav_about"
+                android:icon="@drawable/ic_info_black_24dp"
+                android:title="About" />
 
             <item android:id="@+id/log_out"
                 android:icon="@drawable/ic_assignment_return_black_48dp"
