--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -8,18 +8,22 @@
     tools:context="com.irinnovative.onepagesigninsignup.activity.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
 
-    <RelativeLayout
-        android:layout_width="368dp"
-        android:layout_height="520dp"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
 
         <ListView
             android:id="@+id/lvListRooms"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:divider="#b5b5b5"
+            android:dividerHeight="1dp"
+            android:listSelector="@drawable/list_selector"
             android:layout_alignParentStart="true" />
-    </RelativeLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
