--- a/app/src/main/res/layout/layout_signin.xml
+++ b/app/src/main/res/layout/layout_signin.xml
@@ -8,13 +8,12 @@
     android:padding="48dp">
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="wrap_content"
-
-        android:layout_height="wrap_content"
+        android:id="@+id/imageViewLogin"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:paddingBottom="20dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_login" />
+        />
 
 
     <android.support.design.widget.TextInputLayout
